--- a/CryptoTickerBot.Runner/CryptoTickerBot.Runner.csproj
+++ b/CryptoTickerBot.Runner/CryptoTickerBot.Runner.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -13,5 +13,4 @@
     <ProjectReference Include="..\CryptoTickerBot.GoogleSheets\CryptoTickerBot.GoogleSheets.csproj" />
     <ProjectReference Include="..\CryptoTickerBot.Telegram\CryptoTickerBot.Telegram.csproj" />
   </ItemGroup>
-
 </Project>
