Updates from packages to compile in net6.0

--- a/CryptoTickerBot.API/appsettings.json
+++ b/CryptoTickerBot.API/appsettings.json
@@ -33,7 +33,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CryptoTicker": "Provider=SQLOLEDB.1;Data Source=TONGA-NOVO\\SQLEXPRESS;Initial Catalog=Erky;User ID=crypto_ticker;Password=q$B2rSeXN!vP3Y;Persist Security Info=True;"
+    "CryptoTicker": "Server=TONGA-NOVO\\SQLEXPRESS;Database=Erky;User ID=crypto_ticker;Password=q$B2rSeXN!vP3Y;Connection Timeout=120;"
   }
 
 }
